<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GenerateQRActivity">

    <EditText
        android:id="@+id/txtDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="12"/>

    <Button
        android:id="@+id/btnGenerarQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generar_qr" />

    <Button
        android:id="@+id/btnConsultarQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="sendQuery"
        android:text="@string/consultar_qr" />

    <ImageView
        android:id="@+id/qrCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/qr_generado" />

</LinearLayout>